--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
-  "name": "my-project",
+  "name": "ilhandeploy",
   "compatibility_date": "2025-03-24",
   "assets": {
-    "directory": "./dist"
+    "directory": "./build"
   }
 }
